--- a/notebooks/med_admin_dev.ipynb
+++ b/notebooks/med_admin_dev.ipynb
@@ -45,20 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-11 11:42:26,438 - INFO - initialized logging at logs/etl.log\n"
+      "2025-09-11 17:44:39,685 - INFO - initialized logging at logs/etl.log\n",
+      "2025-09-11 17:44:39,685 - INFO - initialized logging at logs/etl.log\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n",
       "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n"
      ]
     },
@@ -68,7 +70,7 @@
        "<module 'src.tables.medication_admin' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/medication_admin.py'>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-11 11:42:26,451 - INFO - initialized logging at logs/etl.log\n"
+      "2025-09-11 17:44:39,696 - INFO - initialized logging at logs/etl.log\n"
      ]
     }
    ],
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +173,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intm (new)"
+    "# Query MIMIC items"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intm"
    ]
   },
   {
@@ -654,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# New cont med"
+    "## Cont"
    ]
   },
   {
@@ -796,7 +805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dev"
+    "# ETL"
    ]
   },
   {
@@ -808,22 +817,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-31 21:00:23,237 - INFO - parsing the mapping files to identify relevant items and fetch corresponding events...\n",
-      "2025-08-31 21:00:23,238 - INFO - querying the d_items table to identify which event tables to be separately queried for 79 items\n",
-      "2025-08-31 21:00:23,242 - INFO - identified 1 event tables to be separately queried: ['inputevents']\n",
-      "2025-08-31 21:00:23,243 - INFO - fetching events from inputevents table for 79 items\n",
-      "2025-08-31 21:00:23,243 - WARNING - inputevents not yet supported, thus returning all columns\n",
-      "2025-08-31 21:00:26,572 - INFO - fetched 4845165 events from inputevents table for 79 items\n",
-      "2025-08-31 21:00:26,573 - INFO - concatenated 4845165 events from 1 event table(s)\n"
+      "2025-09-11 18:33:19,757 - INFO - parsing the mapping files to identify relevant items and fetch corresponding events...\n",
+      "2025-09-11 18:33:19,760 - INFO - querying the d_items table to identify which event tables to be separately queried for 123 items\n",
+      "2025-09-11 18:33:19,765 - INFO - identified 1 event tables to be separately queried: ['inputevents']\n",
+      "2025-09-11 18:33:19,766 - INFO - fetching events from inputevents table for 123 items\n",
+      "2025-09-11 18:33:19,766 - WARNING - inputevents not yet supported, thus returning all columns\n",
+      "2025-09-11 18:33:28,005 - INFO - fetched 7261761 events from inputevents table for 123 items\n",
+      "2025-09-11 18:33:28,008 - INFO - concatenated 7261761 events from 1 event table(s)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "med_admin_mapping = load_mapping_csv(\"med_admin\")\n",
+    "\n",
+    "logging.info(\"parsing the mapping files to identify relevant items and fetch corresponding events...\")\n",
+    "med_item_ids = get_relevant_item_ids(\n",
+    "    mapping_df = med_admin_mapping, \n",
+    "    decision_col = \"decision\", \n",
+    "    excluded_labels = [\"NO MAPPING\", \"UNSURE\", \"NOT AVAILABLE\"]\n",
+    "    ) \n",
+    "\n",
+    "med_events = fetch_mimic_events(med_item_ids).pipe(convert_and_sort_datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -845,205 +873,127 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>hadm_id</th>\n",
-       "      <th>stay_id</th>\n",
-       "      <th>caregiver_id</th>\n",
-       "      <th>starttime</th>\n",
-       "      <th>endtime</th>\n",
-       "      <th>storetime</th>\n",
+       "      <th>med_category</th>\n",
        "      <th>itemid</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>...</th>\n",
-       "      <th>originalamount</th>\n",
-       "      <th>originalrate</th>\n",
-       "      <th>label</th>\n",
-       "      <th>abbreviation</th>\n",
-       "      <th>linksto</th>\n",
-       "      <th>category</th>\n",
-       "      <th>unitname</th>\n",
-       "      <th>param_type</th>\n",
-       "      <th>lownormalvalue</th>\n",
-       "      <th>highnormalvalue</th>\n",
+       "      <th>decision</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>14046553</td>\n",
-       "      <td>20000094</td>\n",
-       "      <td>35605481</td>\n",
-       "      <td>19825</td>\n",
-       "      <td>2150-03-02 15:25:00</td>\n",
-       "      <td>2150-03-02 16:48:00</td>\n",
-       "      <td>2150-03-02 15:26:00</td>\n",
-       "      <td>221906</td>\n",
-       "      <td>1.623472</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>0.1800</td>\n",
-       "      <td>Norepinephrine</td>\n",
-       "      <td>Norepinephrine</td>\n",
-       "      <td>inputevents</td>\n",
-       "      <td>Medications</td>\n",
-       "      <td>mg</td>\n",
-       "      <td>Solution</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>dextrose</td>\n",
+       "      <td>220949</td>\n",
+       "      <td>BOTH</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>14046553</td>\n",
-       "      <td>20000094</td>\n",
-       "      <td>35605481</td>\n",
-       "      <td>19825</td>\n",
-       "      <td>2150-03-02 16:34:00</td>\n",
-       "      <td>2150-03-02 18:42:00</td>\n",
-       "      <td>2150-03-02 16:35:00</td>\n",
+       "      <td>dextrose_in_water_d5w</td>\n",
        "      <td>220949</td>\n",
-       "      <td>69.565216</td>\n",
-       "      <td>...</td>\n",
-       "      <td>250.000000</td>\n",
-       "      <td>32.6087</td>\n",
-       "      <td>Dextrose 5%</td>\n",
-       "      <td>Dextrose 5%</td>\n",
-       "      <td>inputevents</td>\n",
-       "      <td>Fluids/Intake</td>\n",
-       "      <td>mL</td>\n",
-       "      <td>Solution</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>BOTH</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>narcan</td>\n",
+       "      <td>222021</td>\n",
+       "      <td>BOTH</td>\n",
        "      <td>2</td>\n",
-       "      <td>14046553</td>\n",
-       "      <td>20000094</td>\n",
-       "      <td>35605481</td>\n",
-       "      <td>19825</td>\n",
-       "      <td>2150-03-02 16:34:00</td>\n",
-       "      <td>2150-03-02 18:42:00</td>\n",
-       "      <td>2150-03-02 16:35:00</td>\n",
-       "      <td>221653</td>\n",
-       "      <td>69.565211</td>\n",
-       "      <td>...</td>\n",
-       "      <td>250.000000</td>\n",
-       "      <td>5.0000</td>\n",
-       "      <td>Dobutamine</td>\n",
-       "      <td>Dobutamine</td>\n",
-       "      <td>inputevents</td>\n",
-       "      <td>Medications</td>\n",
-       "      <td>mg</td>\n",
-       "      <td>Solution</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>14046553</td>\n",
-       "      <td>20000094</td>\n",
-       "      <td>35605481</td>\n",
-       "      <td>40982</td>\n",
-       "      <td>2150-03-02 16:48:00</td>\n",
-       "      <td>2150-03-02 18:32:00</td>\n",
-       "      <td>2150-03-02 17:00:00</td>\n",
-       "      <td>221906</td>\n",
-       "      <td>1.806973</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.376528</td>\n",
-       "      <td>0.1600</td>\n",
-       "      <td>Norepinephrine</td>\n",
-       "      <td>Norepinephrine</td>\n",
-       "      <td>inputevents</td>\n",
-       "      <td>Medications</td>\n",
-       "      <td>mg</td>\n",
-       "      <td>Solution</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>naloxone</td>\n",
+       "      <td>222021</td>\n",
+       "      <td>BOTH</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>14046553</td>\n",
-       "      <td>20000094</td>\n",
-       "      <td>35605481</td>\n",
-       "      <td>40982</td>\n",
-       "      <td>2150-03-02 18:32:00</td>\n",
-       "      <td>2150-03-02 18:45:00</td>\n",
-       "      <td>2150-03-02 18:38:00</td>\n",
-       "      <td>221906</td>\n",
-       "      <td>0.253864</td>\n",
+       "      <td>albumin</td>\n",
+       "      <td>220864</td>\n",
+       "      <td>CONTINUOUS</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>4.569556</td>\n",
-       "      <td>0.1800</td>\n",
-       "      <td>Norepinephrine</td>\n",
-       "      <td>Norepinephrine</td>\n",
-       "      <td>inputevents</td>\n",
-       "      <td>Medications</td>\n",
-       "      <td>mg</td>\n",
-       "      <td>Solution</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>fluconazole</td>\n",
+       "      <td>225869</td>\n",
+       "      <td>INTERMITTENT</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>piperacillin_tazobactam</td>\n",
+       "      <td>225893</td>\n",
+       "      <td>INTERMITTENT</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>tobramycin</td>\n",
+       "      <td>225902</td>\n",
+       "      <td>INTERMITTENT</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>furosemide</td>\n",
+       "      <td>228340</td>\n",
+       "      <td>CONTINUOUS</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>amiodarone</td>\n",
+       "      <td>229654</td>\n",
+       "      <td>CONTINUOUS</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>125 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index  subject_id   hadm_id   stay_id  caregiver_id           starttime  \\\n",
-       "0      0    14046553  20000094  35605481         19825 2150-03-02 15:25:00   \n",
-       "1      1    14046553  20000094  35605481         19825 2150-03-02 16:34:00   \n",
-       "2      2    14046553  20000094  35605481         19825 2150-03-02 16:34:00   \n",
-       "3      3    14046553  20000094  35605481         40982 2150-03-02 16:48:00   \n",
-       "4      4    14046553  20000094  35605481         40982 2150-03-02 18:32:00   \n",
+       "                med_category  itemid      decision  count\n",
+       "0                   dextrose  220949          BOTH      2\n",
+       "1      dextrose_in_water_d5w  220949          BOTH      2\n",
+       "2                     narcan  222021          BOTH      2\n",
+       "3                   naloxone  222021          BOTH      2\n",
+       "4                    albumin  220864    CONTINUOUS      1\n",
+       "..                       ...     ...           ...    ...\n",
+       "120              fluconazole  225869  INTERMITTENT      1\n",
+       "121  piperacillin_tazobactam  225893  INTERMITTENT      1\n",
+       "122               tobramycin  225902  INTERMITTENT      1\n",
+       "123               furosemide  228340    CONTINUOUS      1\n",
+       "124               amiodarone  229654    CONTINUOUS      1\n",
        "\n",
-       "              endtime           storetime  itemid     amount  ...  \\\n",
-       "0 2150-03-02 16:48:00 2150-03-02 15:26:00  221906   1.623472  ...   \n",
-       "1 2150-03-02 18:42:00 2150-03-02 16:35:00  220949  69.565216  ...   \n",
-       "2 2150-03-02 18:42:00 2150-03-02 16:35:00  221653  69.565211  ...   \n",
-       "3 2150-03-02 18:32:00 2150-03-02 17:00:00  221906   1.806973  ...   \n",
-       "4 2150-03-02 18:45:00 2150-03-02 18:38:00  221906   0.253864  ...   \n",
-       "\n",
-       "  originalamount  originalrate           label    abbreviation      linksto  \\\n",
-       "0       8.000000        0.1800  Norepinephrine  Norepinephrine  inputevents   \n",
-       "1     250.000000       32.6087     Dextrose 5%     Dextrose 5%  inputevents   \n",
-       "2     250.000000        5.0000      Dobutamine      Dobutamine  inputevents   \n",
-       "3       6.376528        0.1600  Norepinephrine  Norepinephrine  inputevents   \n",
-       "4       4.569556        0.1800  Norepinephrine  Norepinephrine  inputevents   \n",
-       "\n",
-       "        category unitname param_type lownormalvalue  highnormalvalue  \n",
-       "0    Medications       mg   Solution           <NA>              NaN  \n",
-       "1  Fluids/Intake       mL   Solution           <NA>              NaN  \n",
-       "2    Medications       mg   Solution           <NA>              NaN  \n",
-       "3    Medications       mg   Solution           <NA>              NaN  \n",
-       "4    Medications       mg   Solution           <NA>              NaN  \n",
-       "\n",
-       "[5 rows x 35 columns]"
+       "[125 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "med_admin_mapping = load_mapping_csv(\"med_admin\")\n",
-    "\n",
-    "logging.info(\"parsing the mapping files to identify relevant items and fetch corresponding events...\")\n",
-    "med_item_ids = get_relevant_item_ids(\n",
-    "    mapping_df = med_admin_mapping, \n",
-    "    decision_col = \"decision\", \n",
-    "    excluded_labels = [\"NO MAPPING\", \"UNSURE\", \"NOT AVAILABLE\"]\n",
-    "    ) \n",
-    "\n",
-    "med_events = fetch_mimic_events(med_item_ids).pipe(convert_and_sort_datetime)\n",
-    "\n",
-    "med_events.head()"
+    "q = \"\"\"\n",
+    "SELECT med_category, CAST(itemid AS INT) AS itemid, decision\n",
+    "    , COUNT(*) OVER (PARTITION BY itemid) AS count\n",
+    "FROM med_admin_mapping\n",
+    "WHERE decision in ('BOTH', 'CONTINUOUS', 'INTERMITTENT')\n",
+    "ORDER BY count DESC\n",
+    "\"\"\"\n",
+    "med_admin_mapping_c = duckdb.sql(q).df()\n",
+    "med_admin_mapping_c"
    ]
   },
   {
@@ -1055,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1063,8 +1013,8 @@
      "output_type": "stream",
      "text": [
       "ordercomponenttypedescription\n",
-      "Main order parameter                                                                                    3590523\n",
-      "Mixed solution                                                                                          1155586\n",
+      "Main order parameter                                                                                    4850627\n",
+      "Mixed solution                                                                                          2312078\n",
       "Additives                                         Ampoule                                                 99056\n",
       "Name: count, dtype: int64\n",
       "\n",
@@ -1079,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1076,7 @@
     "    , patientweight\n",
     "    , totalamount, totalamountuom, originalamount, originalrate\n",
     "    , ordercategoryname, ordercategorydescription\n",
-    "    , itemid\n",
+    "    , e.itemid\n",
     "    , e.label\n",
     "    , m.decision AS item_class\n",
     "    , CASE WHEN (endtime - starttime) = INTERVAL '1 minute'\n",
@@ -1142,7 +1092,9 @@
     "        OR (item_class = 'BOTH' AND ({find_intm_where_clause}))\n",
     "        THEN 'intm' ELSE 'cont' END AS \"to_table\"\n",
     "FROM med_events e\n",
-    "LEFT JOIN med_admin_mapping m USING (itemid)\n",
+    "LEFT JOIN med_admin_mapping_c m\n",
+    "    ON e.itemid = m.itemid\n",
+    "    AND m.decision IN ('BOTH', 'CONTINUOUS', 'INTERMITTENT')\n",
     "ORDER BY hadm_id, starttime, linkorderid, med_category, endtime\n",
     "\"\"\"\n",
     "med_selected_and_mapped = duckdb.sql(query).df()"
@@ -1150,7 +1102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RESUME as we have confirmed the working of left join \n",
+    "# we can proceed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1164,15 +1126,16 @@
      "data": {
       "text/plain": [
        "statusdescription\n",
-       "FinishedRunning    2639783\n",
-       "ChangeDose/Rate    1722437\n",
-       "Stopped             265600\n",
-       "Paused              215504\n",
-       "Bolus                 2595\n",
+       "FinishedRunning    4679612\n",
+       "ChangeDose/Rate    2942815\n",
+       "Stopped             496306\n",
+       "Paused              374954\n",
+       "Bolus                 3645\n",
+       "Reported                 1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
